--- a/assets/sass/header-footer.sass
+++ b/assets/sass/header-footer.sass
@@ -66,9 +66,24 @@ footer#page-footer
 .dropdown .dropdown-toggle:focus+.menu, .dropdown .menu:hover, .dropdown.active .menu
     display: block !important
 
+// Hiding the logo on the index page by default (will show only on click on the menu toggler!)
+.hide
+    display: none
+
+// caret icon modifications
+.dropdown-toggle .icon.icon-caret
+    margin-right: 0
+
+
 // Responsive
 @media screen and (max-width: $break-width)
+    .dropdown-toggle .icon.icon-caret
+        display: none
+
     header.navbar
+        &.has-banner
+            #menu-show, #menu-show i
+                height: $header-height
         padding: 0
         position: fixed
         .dropdown
@@ -83,6 +98,12 @@ footer#page-footer
                 position: relative
                 margin-bottom: 20px
         #menu-show
+            i
+                height: $header-height * 1.5
+            padding-top: 0
+            padding-bottom: 0
+            border: 0
+            height: $header-height * 1.5
             position: fixed
             top: 0
             margin-left: 0
@@ -91,10 +112,16 @@ footer#page-footer
             align-items: initial
             position: fixed
             right: 0
+        .divider
+            width: 25vh
+            height: 1px
+            border-left: none
+            border-top: 1px solid lighten($body-bg-color, 8%)
 
     // No banner
     header.navbar:not(.has-banner):focus-within
         .navbar-section.show-on-focus
+            animation: slide-down ease 0.15s 1
             padding-top: $header-height
             background-color: $menus-bg-color
             left: 0
@@ -109,8 +136,10 @@ footer#page-footer
     // Banner
     header.navbar.has-banner:focus-within
         .logo, .logo *
+            animation: slide-left ease 0.15s 1
             display: block !important
         .navbar-center
+            animation: slide-down ease 0.15s 1
             display: flex !important
             background-color: $menus-bg-color
             position: fixed
